fix(core,example): sidebar collapsable mobile

--- a/src/scss/custom/_grid.scss
+++ b/src/scss/custom/_grid.scss
@@ -88,6 +88,7 @@
         }
 
         .navbar {
+          padding: 8px 0;
           .menu-wrapper {
             padding: 0;
           }
