--- a/src/scss/custom/_navigation.scss
+++ b/src/scss/custom/_navigation.scss
@@ -10,7 +10,9 @@
     margin-top: $dropdown-menu-vertical-shift;
   }
 }
-
+.row.row-column-border > [class^='col-'] .navbar {
+  padding: 8px 0;
+}
 .navbar {
   background: $navbar-bg-color;
   // overlay div
@@ -279,6 +281,9 @@
 }
 //Tablet horizontal / small desktop
 @media (min-width: #{map-get($grid-breakpoints, lg)}) {
+  .row.row-column-border > [class^='col-'] .navbar {
+    padding: 0;
+  }
   .navbar {
     background: $navigation-bg-color-desktop;
     padding: 0;
